<resources>
    <string name="app_name">Sheet As App</string>

    <string name="column1">Column 01</string>
    <string name="column2">Column 02</string>
    <string name="column3">Column 03</string>
    <string name="column4">Column 04</string>
    <string name="data_syncing_failed">Data syncing failed!</string>
    <string name="reload_page">Reload Page</string>
    <string name="reconnect_to_wi_fi_or_mobile_data">Reconnect to Wi-Fi or Mobile data</string>
    <string name="check_your_modem_and_router">Check your modem and router</string>
    <string name="try_these_steps_to_get_back_your_data">Try these steps to get back your data:</string>
    <string name="network_image">nImg</string>
    <string name="todo1">TODO</string>
    <string name="open_your_excel_sheet_as_app">Open your excel sheet as App</string>
    <string name="developed_by_thimira_dulakshitha">Developed by Thimira Dulakshitha</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="sheet_as_app">Sheet as App</string>
    <string name="todo2">TODO</string>
    <string name="syncing">Syncing...</string>
</resources>