<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivitySplash">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/btn_close_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/ic_baseline_close_24"
            android:contentDescription="@string/todo1" />


    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="240dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="90dp"
            android:src="@drawable/icon_box"
            android:contentDescription="@string/todo2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:gravity="center_horizontal"
            android:text="@string/sheet_as_app"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/colordark"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/regular"
            android:gravity="center_horizontal"
            android:text="@string/open_your_excel_sheet_as_app"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/regular"
            android:gravity="center_horizontal"
            android:text="@string/version_1_0"
            android:textAlignment="center"
            android:textColor="@color/colordark"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/regular"
            android:gravity="center_horizontal"
            android:text="@string/developed_by_thimira_dulakshitha"
            android:textAlignment="center"
            android:textColor="@color/colordark"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>